--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,8 +4,10 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="9"
         android:targetSdkVersion="15" />
+    
+    <uses-permission android:name="android.permission.NFC"/>
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -28,6 +30,24 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".delete.TestActivity"
+            android:label="@string/title_activity_test" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.NFCActivity"
+            android:label="@string/title_activity_nfc" >
+             <intent-filter>
+	        	<action android:name="android.nfc.action.NDEF_DISCOVERED" />
+      			<category android:name="android.intent.category.DEFAULT" />
+      			<data android:mimeType="*/*" />
+		    </intent-filter>
         </activity>
     </application>
 
