--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,10 +4,10 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="9"
+        android:minSdkVersion="11"
         android:targetSdkVersion="15" />
-    
-    <uses-permission android:name="android.permission.NFC"/>
+
+    <uses-permission android:name="android.permission.NFC" />
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -25,29 +25,32 @@
         <activity
             android:name=".ui.BaseActivity"
             android:label="@string/title_activity_base" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".delete.TestActivity"
-            android:label="@string/title_activity_test" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:label="@string/title_activity_test" >          
         </activity>
         <activity
             android:name=".ui.NFCActivity"
             android:label="@string/title_activity_nfc" >
-             <intent-filter>
-	        	<action android:name="android.nfc.action.NDEF_DISCOVERED" />
-      			<category android:name="android.intent.category.DEFAULT" />
-      			<data android:mimeType="*/*" />
-		    </intent-filter>
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="*/*" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.NFCWriteActivity"
+            android:label="@string/title_activity_nfcwrite" >
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="*/*" />
+            </intent-filter>
         </activity>
     </application>
 
